Add dashboard component and related functionality; update App component

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../assets/background.jpg");
+    /* background-image: url("../../assets/background.jpg"); */
     /* Replace with your image path */
     background-size: cover;
     /* Cover the entire viewport */
