--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -1,9 +1,9 @@
-html body {
+/* html body {
   background-image: url("../../assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
+} */
 
 .signup-container {
     display: flex;
